--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -757,6 +757,7 @@ SOURCES = \
 	windows.foundation.idl \
 	windows.gaming.input.idl \
 	windows.gaming.input.forcefeedback.idl \
+	windows.globalization.idl \
 	windows.h \
 	windows.media.speechsynthesis.idl \
 	windows.system.idl \
