--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -754,6 +754,7 @@ SOURCES = \
 	windef.h \
 	windns.h \
 	windows.foundation.idl \
+	windows.gaming.input.idl \
 	windows.h \
 	windows.media.speechsynthesis.idl \
 	windowscontracts.idl \
