--- a/configure.ac
+++ b/configure.ac
@@ -3234,6 +3234,7 @@ WINE_CONFIG_MAKEFILE(dlls/dpnet)
 WINE_CONFIG_MAKEFILE(dlls/dpnet/tests)
 WINE_CONFIG_MAKEFILE(dlls/dpnhpast)
 WINE_CONFIG_MAKEFILE(dlls/dpnlobby)
+WINE_CONFIG_MAKEFILE(dlls/dpvacm)
 WINE_CONFIG_MAKEFILE(dlls/dpvoice)
 WINE_CONFIG_MAKEFILE(dlls/dpvoice/tests)
 WINE_CONFIG_MAKEFILE(dlls/dpwsockx)
